styles.css
:root {
  --primaryLight: #ddd8c4;
  --primaryDark: #191d32;
  --green: #6ed175;
  --defaultTransition: 0.5s all ease;
}

* {
  margin: 0;
  padding: 0;
}

body {
  font-family: Lato, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
  margin: 0;
  padding: 0;
}

div.landing {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  height: 100vh;
  background: linear-gradient(rgba(6, 81, 67, 0.7), rgba(6, 81, 67, 0.7)),
    url("./images/pexels-photo-414837.jpeg");
  background-size: cover;
  color: var(--primaryDark);
  background-attachment: fixed;
}

div.landing h1 {
  text-transform: uppercase;
  font-family: Montserrat, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
}

div.landing p {
  font-weight: bold;
}

div.landing a{
  z-index: 1;
}

a.cta {
  border: 2px solid var(--green);
  border-radius: 3px;
  margin: 0.5em;
  padding: 0.75em;
  text-transform: uppercase;
  text-decoration: none;
  color: var(--green);
  transition: 0.5s all cubic-bezier(0.19, 1, 0.22, 1);
  cursor: pointer;
}

a.cta:hover {
  background: var(--green);
  color: var(--primaryDark);
}

div.content {
  display: grid;
  /* grid-template-columns: 1fr 1fr; */
}

div.title {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: flex-start;
}

div.title > * {
  margin: 0.5em;
  padding: 0.3em;
}

div.title svg {
  /* padding: 0 0 0 0.3em; */
  align-self: center;
  justify-self: flex-start;
  margin: 0.5em 0 0.5em calc(2px + 0.5em);
  font-weight: bold;
  text-transform: uppercase;
  font-size: 1.5em;
}

div.title h1 {
  border-left: 2px solid var(--green);
  text-transform: uppercase;
  padding: 0.3em;
  /* align-self: flex-start;
    justify-self: flex-start;
    margin-left: 1em;
    margin-bottom: .5em;
    margin-top: .5em;
    margin-right: 1em; */
  margin: 0.5em 0 0.5em 0;
}

div.title p {
  border-left: 2px solid var(--green);
  text-transform: uppercase;
  padding: 0.3em;
  /* align-self: flex-start;
    justify-self: flex-start;
    margin-left: 1em;
    margin-bottom: .5em;
    margin-top: .5em;
    margin-right: 1em; */
  margin: 0.5em 0 0.5em 0;
}

div.landing li a {
  text-decoration: none;
  color: var(--primaryDark);
}


div.content > div.heading {
  grid-column: 1 / 3;
  /* padding: 1em; */
}

div.contents:nth-child(even) {
  background: var(--primaryLight);
  color: var(--primaryDark);
}

div.contents:nth-child(odd) {
  background: var(--primaryDark);
  color: var(--primaryLight);
}

div.contents {
  display: inline-flex;
  flex-direction: column;
  align-items: flex-start;
  justify-items: flex-start;
  grid-column: span 1;
}

div.contents > p {
  margin: 0.5em 1em 0.5em 1em;
  padding: 0.3em;
}

/* Navigation */
nav{
  display: flex;
  flex-direction: row;
  background: transparent;
  position: fixed;
  min-height: 100vh;
  transition: var(--defaultTransition);
}

nav svg{
  align-items: center;
  justify-self: flex-start;
  color: var(--green);
  margin: .5em;
  padding: .5em;
  cursor: pointer;
  transition: var(--defaultTransition);
  font-size: 1.5em;
}

nav li:not(:last-child){
  border-bottom: 1px solid var(--green);
}
nav ul{
  align-self: center;
  justify-self: flex-start;
  list-style: none;
  background: transparent;
  border: 1px solid var(--green);
  border-radius: 3px;
  background: var(--primaryDark);
}

nav a{
  text-decoration: none;
  color: var(--green);
  display: inline-block;
  padding: .5em;
  cursor: pointer;
}
nav ul{
  transition: var(--defaultTransition);
  margin: 1em;
  align-self: flex-start;
  justify-self: flex-start;
}

nav ul.inactive{
/* display: none; */
transform: translateY(-60px);
opacity: 0;
}

nav ul.active{
/* display: block; */
transform: translateY(0);
opacity: 1;
}
@media all and (max-width: 768px) {
  div.landing {
    display: flex;
    height: auto;
    align-items: center;
    justify-content: center;
    background: var(--primaryLight);
    padding: 1em;
    text-align: center;
  }
  a.cta {
    display: none;
  }
  div.content {
    grid-template-columns: 1fr;
  }
  div.contents {
    grid-column: 1 / 2;
    /* width: 100%; */
    word-wrap: break-word;
  }
  nav ul{
    align-self: center;
    justify-self: flex-start;
  }
  nav ul.active{
    background: var(--primaryDark);
  }
  nav.inactive{
    background: transparent;
  }
  nav.active{
    background: var(--primaryDark);
  }
}

@media all and (min-width: 769px) {
  div.content {
    grid-template-columns: 1fr 1fr;
  }
}

